add more info in about and readme.

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "- toc: false\n",
     "- branch: master\n",
-    "- badges: false\n",
+    "- badges: true\n",
     "- comments: false\n",
     "- author: \"Libre AI\"\n",
     "- categories: [ireland, covid19]"
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "21  2020-03-22      ie    906       4          5             18"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-f40cf0f8a40442c68a3107fe16638f64\"></div>\n",
+       "<div id=\"altair-viz-f13da7bff04f44c59b01e382f13f5b29\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-f40cf0f8a40442c68a3107fe16638f64\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-f13da7bff04f44c59b01e382f13f5b29\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -347,7 +347,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-2862e2f6a47d435186136b5e99bf001e\"></div>\n",
+       "<div id=\"altair-viz-000ed199453f4cfab0327b7d32fe5797\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-2862e2f6a47d435186136b5e99bf001e\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-000ed199453f4cfab0327b7d32fe5797\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -428,7 +428,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,17 +458,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e157642f23634a839a2ad69d924278fc\"></div>\n",
+       "<div id=\"altair-viz-de710243c70c4811820aa1f7173da58e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-e157642f23634a839a2ad69d924278fc\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-de710243c70c4811820aa1f7173da58e\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -516,7 +516,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,17 +556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-d268954e48444ed0add115ae8945d17c\"></div>\n",
+       "<div id=\"altair-viz-5943cfffd7c140a2bc62b72ab9834e74\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-d268954e48444ed0add115ae8945d17c\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-5943cfffd7c140a2bc62b72ab9834e74\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -614,7 +614,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
    "metadata": {},
    "source": [
     "# Number of Covid-19 cases per 1M population\n",
-    "The pupulation of Ireland, Italy, and Spain is as follows (in millions) [\\[source\\]](https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population):\n",
+    "The respective population of Ireland, Italy, and Spain is as follows (in millions) [\\[source\\]](https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population):\n",
     "\n",
     "- **Ireland** : 4.9M\n",
     "- **Italy** : 60.2M\n",
@@ -648,17 +648,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-a29c00b534b84ba3b6aa88a05c41f0cd\"></div>\n",
+       "<div id=\"altair-viz-4b261aa5bb1349d7bc223636286467e0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-a29c00b534b84ba3b6aa88a05c41f0cd\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-4b261aa5bb1349d7bc223636286467e0\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -706,7 +706,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,17 +729,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-98e867440c9e43f1b377bc0a5c11b39a\"></div>\n",
+       "<div id=\"altair-viz-34e835ad58d14ea284ff98ac7fe19e8f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-98e867440c9e43f1b377bc0a5c11b39a\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-34e835ad58d14ea284ff98ac7fe19e8f\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -787,7 +787,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,17 +815,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-6c9351c930ea455c9dfb8b963b613432\"></div>\n",
+       "<div id=\"altair-viz-f34634754fbb4b1ca200fb63c57977d8\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-6c9351c930ea455c9dfb8b963b613432\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-f34634754fbb4b1ca200fb63c57977d8\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -873,7 +873,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,17 +901,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-787372c23d514e0f9e48146a2265eafb\"></div>\n",
+       "<div id=\"altair-viz-3a9f6a9acc8d47b38fd5f1a75ff7d780\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-787372c23d514e0f9e48146a2265eafb\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-3a9f6a9acc8d47b38fd5f1a75ff7d780\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -959,7 +959,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Data sournces:\n",
+    "### Data Sources\n",
     "- Government of Ireland [https://www.gov.ie/en/news/7e0924-latest-updates-on-covid-19-coronavirus/]\n",
     "- 2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [https://github.com/CSSEGISandData/COVID-19]\n"
    ]
