--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -4,7 +4,7 @@ description: Dashboard
 title: Covid-19 in Ireland
 toc: false
 branch: master
-badges: false
+badges: true
 comments: false
 author: "Libre AI"
 categories: [ireland, covid19]
@@ -49,10 +49,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-d268954e48444ed0add115ae8945d17c"></div>
+<div id="altair-viz-5943cfffd7c140a2bc62b72ab9834e74"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-d268954e48444ed0add115ae8945d17c");
+    const outputDiv = document.getElementById("altair-viz-5943cfffd7c140a2bc62b72ab9834e74");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -107,7 +107,7 @@ layout: notebook
 
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Number-of-Covid-19-cases-per-1M-population">Number of Covid-19 cases per 1M population<a class="anchor-link" href="#Number-of-Covid-19-cases-per-1M-population"> </a></h1><p>The pupulation of Ireland, Italy, and Spain is as follows (in millions) <a href="https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population">[source]</a>:</p>
+<h1 id="Number-of-Covid-19-cases-per-1M-population">Number of Covid-19 cases per 1M population<a class="anchor-link" href="#Number-of-Covid-19-cases-per-1M-population"> </a></h1><p>The respective population of Ireland, Italy, and Spain is as follows (in millions) <a href="https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population">[source]</a>:</p>
 <ul>
 <li><strong>Ireland</strong> : 4.9M</li>
 <li><strong>Italy</strong> : 60.2M</li>
@@ -130,10 +130,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-787372c23d514e0f9e48146a2265eafb"></div>
+<div id="altair-viz-3a9f6a9acc8d47b38fd5f1a75ff7d780"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-787372c23d514e0f9e48146a2265eafb");
+    const outputDiv = document.getElementById("altair-viz-3a9f6a9acc8d47b38fd5f1a75ff7d780");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -189,7 +189,7 @@ layout: notebook
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <hr>
-<h3 id="Data-sournces:">Data sournces:<a class="anchor-link" href="#Data-sournces:"> </a></h3><ul>
+<h3 id="Data-Sources">Data Sources<a class="anchor-link" href="#Data-Sources"> </a></h3><ul>
 <li>Government of Ireland [<a href="https://www.gov.ie/en/news/7e0924-latest-updates-on-covid-19-coronavirus/">https://www.gov.ie/en/news/7e0924-latest-updates-on-covid-19-coronavirus/</a>]</li>
 <li>2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE [<a href="https://github.com/CSSEGISandData/COVID-19">https://github.com/CSSEGISandData/COVID-19</a>]</li>
 </ul>
