refining metadata and frontmatter.

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -11,6 +11,8 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: false\n",
+    "- image: images/covid-19-ie-cases-per-m.png\n",
+    "- permalink: /covid-19-ie/\n",
     "- author: \"Libre AI\"\n",
     "- categories: [ireland, covid19]"
    ]
