--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -6,6 +6,8 @@ toc: false
 branch: master
 badges: true
 comments: false
+image: images/covid-19-ie-cases-per-m.png
+permalink: /covid-19-ie/
 author: "Libre AI"
 categories: [ireland, covid19]
 nb_path: _notebooks/2020-03-21-covid-19-ie.ipynb
