--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -12,14 +12,14 @@
     "- badges: true\n",
     "- comments: false\n",
     "- image: images/covid-19-ie-cases-per-m.png\n",
-    "- permalink: /covid-19-ie/\n",
+    "- permalink: /covid-19-dashboard-ie/\n",
     "- author: \"Libre AI\"\n",
     "- categories: [ireland, covid19]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "21  2020-03-22      ie    906       4          5             18"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,17 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-cfb5755f228440dc8b4c9c50882921c3\"></div>\n",
+       "<div id=\"altair-viz-26ad5cf5ab1949af9b6e0fbaea115317\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-cfb5755f228440dc8b4c9c50882921c3\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-26ad5cf5ab1949af9b6e0fbaea115317\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -349,7 +349,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,17 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4946895e28324ef292598df2bed28cbb\"></div>\n",
+       "<div id=\"altair-viz-1538cb2c7aa04f678c0ad05a7a6cc5f5\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-4946895e28324ef292598df2bed28cbb\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-1538cb2c7aa04f678c0ad05a7a6cc5f5\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -430,7 +430,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,17 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0d66d3e16e124f2a95ac8344316d33cf\"></div>\n",
+       "<div id=\"altair-viz-bafca1df210b463dabdcdf237cb89447\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-0d66d3e16e124f2a95ac8344316d33cf\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-bafca1df210b463dabdcdf237cb89447\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -518,7 +518,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,17 +558,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-cac902663a5b4afc950167fd210cbd89\"></div>\n",
+       "<div id=\"altair-viz-90e33b7fe7db4a559edc0632151cdc78\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-cac902663a5b4afc950167fd210cbd89\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-90e33b7fe7db4a559edc0632151cdc78\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -616,7 +616,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,17 +650,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-c6962b9ffa784997b966548da89b362f\"></div>\n",
+       "<div id=\"altair-viz-b5e1c8ae5cfb4afe98bc4bb48830faed\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-c6962b9ffa784997b966548da89b362f\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-b5e1c8ae5cfb4afe98bc4bb48830faed\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -708,7 +708,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,17 +731,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-98862e45da8d4bdba988a8f36af85ba9\"></div>\n",
+       "<div id=\"altair-viz-bc42e7d25eb6432ba6426fc3d1a70d6b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-98862e45da8d4bdba988a8f36af85ba9\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-bc42e7d25eb6432ba6426fc3d1a70d6b\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -789,7 +789,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,17 +817,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-a58557c270b54a7bbafe5bc3d800acdf\"></div>\n",
+       "<div id=\"altair-viz-279c95e91bd8457ab85114ff89f32844\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-a58557c270b54a7bbafe5bc3d800acdf\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-279c95e91bd8457ab85114ff89f32844\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -875,7 +875,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,17 +903,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4b1954cd67a8458bae3ccc936683e420\"></div>\n",
+       "<div id=\"altair-viz-18a6ca55b2c6438a814db6194353d9ad\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-4b1954cd67a8458bae3ccc936683e420\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-18a6ca55b2c6438a814db6194353d9ad\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -961,7 +961,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
