--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -7,7 +7,7 @@ branch: master
 badges: true
 comments: false
 image: images/covid-19-ie-cases-per-m.png
-permalink: /covid-19-ie/
+permalink: /covid-19-dashboard-ie/
 author: "Libre AI"
 categories: [ireland, covid19]
 nb_path: _notebooks/2020-03-21-covid-19-ie.ipynb
@@ -51,10 +51,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-cac902663a5b4afc950167fd210cbd89"></div>
+<div id="altair-viz-90e33b7fe7db4a559edc0632151cdc78"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-cac902663a5b4afc950167fd210cbd89");
+    const outputDiv = document.getElementById("altair-viz-90e33b7fe7db4a559edc0632151cdc78");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -132,10 +132,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-4b1954cd67a8458bae3ccc936683e420"></div>
+<div id="altair-viz-18a6ca55b2c6438a814db6194353d9ad"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-4b1954cd67a8458bae3ccc936683e420");
+    const outputDiv = document.getElementById("altair-viz-18a6ca55b2c6438a814db6194353d9ad");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
