data and visualizations updated 2020-03-23

--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -41,8 +41,19 @@ layout: notebook
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <hr>
-<h1>Total Deaths: <span style="color:red">6<span></h1>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1> Total Deaths: <span style="color:red">6<span> </h1>
 <h1>Total Confirmed: <span style="color:red">1125<span></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <hr>
 
 </div>
@@ -77,10 +88,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-9d16bd4382c84d6cbbb20ffda785c7ec"></div>
+<div id="altair-viz-696091f306ec4480be2c99dc4f2f1526"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-9d16bd4382c84d6cbbb20ffda785c7ec");
+    const outputDiv = document.getElementById("altair-viz-696091f306ec4480be2c99dc4f2f1526");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
@@ -158,10 +169,10 @@ layout: notebook
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 
-<div id="altair-viz-d6f35a7b44d24e7b961abd4f35850cd2"></div>
+<div id="altair-viz-7f5e4c53c0ec4383a110908a91103a3c"></div>
 <script type="text/javascript">
   (function(spec, embedOpt){
-    const outputDiv = document.getElementById("altair-viz-d6f35a7b44d24e7b961abd4f35850cd2");
+    const outputDiv = document.getElementById("altair-viz-7f5e4c53c0ec4383a110908a91103a3c");
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
       "vega-lib": "https://cdn.jsdelivr.net/npm//vega-lib?noext",
