--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -28,11 +28,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "# Total Deaths: <span style=\"color:red\">6<span>\n",
-    "# Total Confirmed: <span style=\"color:red\">1125<span>\n",
-    "    \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> Total Deaths: <span style=\"color:red\">6<span> </h1>\n",
+    "<h1>Total Confirmed: <span style=\"color:red\">1125<span></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +170,7 @@
        "22  2020-03-23      ie   1125       6          5             19"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +233,7 @@
        "16  2020-03-17      ie    292       2          5             13"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,17 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-ac61f9cad58546498d6757d12f85f553\"></div>\n",
+       "<div id=\"altair-viz-455b2bb70e654bd6847e4d889b0fabb6\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-ac61f9cad58546498d6757d12f85f553\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-455b2bb70e654bd6847e4d889b0fabb6\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -375,7 +385,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,17 +408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9002a1147467403faf6827dbb521f7d4\"></div>\n",
+       "<div id=\"altair-viz-411e9527fc1c44a2901dca87872caed2\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-9002a1147467403faf6827dbb521f7d4\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-411e9527fc1c44a2901dca87872caed2\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -456,7 +466,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,17 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e4ec6f7af0cd44e3ae8c45605155f7b7\"></div>\n",
+       "<div id=\"altair-viz-8de7f71057bd4e019719c8b427b3584c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-e4ec6f7af0cd44e3ae8c45605155f7b7\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-8de7f71057bd4e019719c8b427b3584c\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -544,7 +554,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9d16bd4382c84d6cbbb20ffda785c7ec\"></div>\n",
+       "<div id=\"altair-viz-696091f306ec4480be2c99dc4f2f1526\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-9d16bd4382c84d6cbbb20ffda785c7ec\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-696091f306ec4480be2c99dc4f2f1526\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -642,7 +652,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,17 +684,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-720e6ac7aa6642e9a47d4bf1fa576422\"></div>\n",
+       "<div id=\"altair-viz-e4b03b14727742d7bfa0be40e541d58d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-720e6ac7aa6642e9a47d4bf1fa576422\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-e4b03b14727742d7bfa0be40e541d58d\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -732,7 +742,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,17 +765,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9eaedb1a2556406d83e239b557a445cc\"></div>\n",
+       "<div id=\"altair-viz-5ab52425fba844abaab8cd411b8e74e8\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-9eaedb1a2556406d83e239b557a445cc\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-5ab52425fba844abaab8cd411b8e74e8\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -813,7 +823,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,17 +851,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e7589493ddf54e9cbe7d737fca18add9\"></div>\n",
+       "<div id=\"altair-viz-4490fd61598d43f7b7da96b377283fd5\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-e7589493ddf54e9cbe7d737fca18add9\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-4490fd61598d43f7b7da96b377283fd5\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -899,7 +909,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,17 +937,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-d6f35a7b44d24e7b961abd4f35850cd2\"></div>\n",
+       "<div id=\"altair-viz-7f5e4c53c0ec4383a110908a91103a3c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
-       "    const outputDiv = document.getElementById(\"altair-viz-d6f35a7b44d24e7b961abd4f35850cd2\");\n",
+       "    const outputDiv = document.getElementById(\"altair-viz-7f5e4c53c0ec4383a110908a91103a3c\");\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
        "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -985,7 +995,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
