data and visualizations updated 2020-03-23

--- a/_notebooks/2020-03-21-covid-19-ie.ipynb
+++ b/_notebooks/2020-03-21-covid-19-ie.ipynb
@@ -35,8 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> Total Deaths: <span style=\"color:red\">6<span> </h1>\n",
-    "<h1>Total Confirmed: <span style=\"color:red\">1125<span></h1>"
+    "<h1> Total Deaths: <span style=\"color:red\">6</span> </h1>\n",
+    "<h1>Total Confirmed: <span style=\"color:red\">1125</span></h1>"
    ]
   },
   {
