--- a/_posts/2020-03-21-covid-19-ie.md
+++ b/_posts/2020-03-21-covid-19-ie.md
@@ -47,8 +47,8 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1> Total Deaths: <span style="color:red">6<span> </h1>
-<h1>Total Confirmed: <span style="color:red">1125<span></h1>
+<h1> Total Deaths: <span style="color:red">6</span> </h1>
+<h1>Total Confirmed: <span style="color:red">1125</span></h1>
 </div>
 </div>
 </div>
